--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,1 @@
-postgresql://postgres:Pvjt3ukKc4QrP@db.vhvimbadsxfjhcokusjd.supabase.co:5432/postgres
+DB_URL = "postgresql://postgres:Pvjt3ukKc4QrP@db.vhvimbadsxfjhcokusjd.supabase.co:5432/postgres"
